--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
     <table>
         <td>Hi, I'm your first cell.</td>
+        <td>I'm your second cell.</td>
+        <td>I'm your third cell.</td>
+        <td>I'm your fourth cell.</td>
     </table>
 </body>
 </html>
