Added two more rows using the tr tag

--- a/index.html
+++ b/index.html
@@ -19,6 +19,20 @@
             <td>I'm your third cell.</td>
             <td>I'm your fourth cell.</td>
         </tr>
+
+        <tr>
+            <td>Hi, I'm your second row first cell.</td>
+            <td>I'm your second row second cell.</td>
+            <td>I'm your second row third cell.</td>
+            <td>I'm your second row fourth cell.</td>
+        </tr>
+
+        <tr>
+            <td>Hi, I'm your third row first cell.</td>
+            <td>I'm your third row second cell.</td>
+            <td>I'm your third row third cell.</td>
+            <td>I'm your third row fourth cell.</td>
+        </tr>
         
     </table>
 </body>
